--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en">
-    <link rel="stylesheet" href="./public/stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 <head>
 	<meta charset = "UTF-8">
   	<title> My Form </title>
