commit on master

--- a/public/system1.html
+++ b/public/system1.html
@@ -352,6 +352,8 @@
 </style>
 </head>
 <body>
+  <a href="/system1history">System1 History</a>
+  <a href="/valvelookup">Valve lookup</a>
     <div id="valvedata" class="valvedata">
         <form id="statusform" onsubmit="savevalve()">
             <input type="button"></input>
