--- a/public/system1.html
+++ b/public/system1.html
@@ -352,7 +352,7 @@
 </style>
 </head>
 <body>
-  <a href="/system1history">System1 History</a>
+  <a href="/system1historydata">System1 History</a>
   <a href="/valvelookup">Valve lookup</a>
     <div id="valvedata" class="valvedata">
         <form id="statusform" onsubmit="savevalve()">
