--- a/public/system1.html
+++ b/public/system1.html
@@ -352,8 +352,12 @@
 </style>
 </head>
 <body>
-  <a href="/system1historydata">System1 History</a>
+  <header>
+    <h1 href="/system1historydata">System1 History</h1>
+  </header>
+  <a </a>
   <a href="/valvelookup">Valve lookup</a>
+  <a href="/newdiagram">New Diagram</a>
     <div id="valvedata" class="valvedata">
         <form id="statusform" onsubmit="savevalve()">
             <input type="button"></input>
