--- a/public/system1.html
+++ b/public/system1.html
@@ -353,7 +353,9 @@
 </head>
 <body>
   <header>
-    <h1 href="/system1historydata">System1 History</h1>
+    <h1>
+      <a href="/system1historydata">System1 History</a>
+    </h1>
   </header>
   <a </a>
   <a href="/valvelookup">Valve lookup</a>
