commit on master

--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
 		<h1>Login</h1>
 	</header>
 
-	<form action="/system1">
+	<form action="/systems">
 		<fieldset>
 				
 			<label>Username</label>
