commit on master

--- a/public/system1.html
+++ b/public/system1.html
@@ -358,14 +358,14 @@
     </h1>
   </header>
   <a </a>
-  <a href="/valvelookup">Valve lookup</a>
-  <a href="/newdiagram">New Diagram</a>
+  <a href="/systems">Systems</a>
     <div id="valvedata" class="valvedata">
         <form id="statusform" onsubmit="savevalve()">
             <input type="button"></input>
 
         </form>
     </div>
+    <br><br><br>
     <div class="tagproposal" id="proposal">
         <button onclick="newline()">Add New Line</button>
         <button onclick="checklineup()">Check valves</button>
