commit on master

--- a/public/systemlookup.html
+++ b/public/systemlookup.html
@@ -24,7 +24,7 @@
 		<button onclick=systemsearch()>Submit</button>
 		<br>
             <input type="text" id="valve" placeholder="valve name"></input>
-            <button onclick=search()>Submit</button>
+            <button onclick=valvesearch()>Submit</button>
 	</header>
 	<p id="systemdata">system information</p>
     <p id="valvedata"> valve information</p>
