commit on master

--- a/public/newdiagram.html
+++ b/public/newdiagram.html
@@ -30,7 +30,7 @@
             <button onclick=submitValve()>Submit</button>
         </form>
 	</header>
-    <img id="canvas" src="./images/system1.png">
+    <img id="canvas" src="">
 
 
 </body>
