--- a/public/systems.html
+++ b/public/systems.html
@@ -10,12 +10,12 @@
         }
     	</style>
 </head>
-<script src="systems.js"></script>
 <body align='center'>
     <br>
-    <a href="./newdiagram">New diagram</a><br>
-    <a href="./systemlookup">System Lookup</a><br>
-    <a href="./system1">system1</a>
+    <a href="../newdiagram">New diagram</a><br>
+    <a href="../systemlookup">System Lookup</a><br>
+    <a href="../systemlist">System List</a><br>
+    <a href="../system1">Demo System1</a>
 <!--- <a href="./register">register</a>    -->    
 </body>
 </html>
