commit on master

--- a/public/systems.html
+++ b/public/systems.html
@@ -12,10 +12,12 @@
 </head>
 <body align='center'>
     <br>
+    <a href="../about">About</a><br>
     <a href="../newdiagram">New diagram</a><br>
-    <a href="../systemlookup">System Lookup</a><br>
+    <a href="../dbmanagement">Database Management</a><br>
+    <a href="../systemlookup">Valve search</a><br>
     <a href="../systemlist">System List</a><br>
-    <a href="../system1">Demo System1</a>
+    <a href="../systemhistorydata">System History</a>
 <!--- <a href="./register">register</a>    -->    
 </body>
 </html>
