--- a/public/systemselection.html
+++ b/public/systemselection.html
@@ -12,7 +12,9 @@
 </head>
 <body align='center'>
     <br>
-    <a href="./login">Login</a>
+    <a href="./system1">System1</a>
+    <a href="./system2">System2</a>
+    <a href="./system3">System3</a>
 <!--- <a href="./register">register</a>    -->    
 </body>
 </html>
