--- a/public/login.html
+++ b/public/login.html
@@ -14,17 +14,16 @@
 		<h1>Login</h1>
 	</header>
 
-	<form action="/systems">
+	<form action="/systems" method="GET">
 		<fieldset>
 				
 			<label>Username</label>
-			<input type ="username" id = 'username' name="username" placeholder="username" required>
+			<input type ="username" id = 'username' name="username" placeholder="username">
 			<br><br>
 
 			<label>Password</label>
-			<input type="password" id = "password" name="password" required>
+			<input type="password" id = "password" name="password">
 			<br><br>
-
 			<button type ="submit">Submit</button>
 		</fieldset>
         </form>
