--- a/public/systemlist.html
+++ b/public/systemlist.html
@@ -5,6 +5,7 @@
       
 .image {
     top: 200px;
+    left: 50px;
     position: absolute;
     z-index: 2;
     margin-left:10px;
@@ -23,6 +24,38 @@
         <option id="blank"></option>
         </select>
         <button onclick=systemLookup()>load</button>
+        <p>valve: </p>
+        <p id="valveselectedp"></p>
+        <select id="valveselected">
+          <option></option>
+        </select>
+        <button onclick=loadvalve()>load</button>
+        <p>status: </p>
+        <p id="valvestatus"></p>
+        <form id="changestatusform">
+          <select id="changestatus">
+            <option></option>
+            <option name="Untagged" value="Untagged">Untagged</option>
+            <option name="Caution_Tag" value="Caution_Tag">Caution_Tag</option>
+            <option name="Danger_Tag_Shut" value="Danger_Tag_Shut">Danger_Tag_Shut</option>
+            <option name="Danger_Tag_Open" value="Danger_Tag_Open">Danger_Tag_Open</option>
+            <option name="Working" value="Working">Working</option>
+          </select>
+        <button onclick="changeStatus()">Change status</button>
+      </form>
+        <form id="addWAFform">
+        <input type="text" name="addWAF" id="addWAF">
+        <button onclick="addwaf()">add WAF</button>
+      </form>
+      <form id="removeWAFform">
+        <select id="removeWAF">
+          <option></option>
+        </select>
+      <button onclick="removewaf()">remove WAF</button>
+    </form>
+  <div id="wafinfo">
+    <p>WAFs: </p><br>
+  </div>
     </div>
     <div id="systemloaded" class="image">
     <img id="canvas" usemap="#system" src="/images/system0.png" class="image">
@@ -30,7 +63,7 @@
   </div>
     <div id="valvedata"></div>
   <div>
-  <canvas id="sketchpad" height="2000" width="2800">
+  <canvas id="sketchpad" height="2000" width="2800" class="image">
   </canvas>
 </div>
     <script src="systemsketchpad.js" type="text/javascript"></script>
