--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 </head>
 <body align='center'>
     <br>
-    <a href="./login">Login</a>
+    <a href="./systems">Home</a>
 <!--- <a href="./register">register</a>    -->    
 </body>
 </html>
