--- a/public/systemlookup.html
+++ b/public/systemlookup.html
@@ -17,9 +17,9 @@
 		<a>Select system: </a>
 		<select name="system" id="system">
 			<option value=""></option>
-			<option value="1">System 1</option>
-			<option value="2">System 2</option>
-			<option value="3">System 3</option>
+			<option value="system1">System 1</option>
+			<option value="system2">System 2</option>
+			<option value="system3">System 3</option>
 		</select>
 		<button onclick=systemsearch()>Submit</button>
 		<br>
