--- a/public/about.html
+++ b/public/about.html
@@ -15,9 +15,8 @@
     	</style>
 </head>
 <body>
-    <a href="/systems">Home</a>
     <br>  
-    <p class="a">Digital Pinboards is a software I created to identify work and system status configuration on mechanical/electrical/engineering diagrams. 
+    <p class="a">Digital Pinboards is a software created to control work and system status configuration on mechanical/electrical/engineering diagrams. 
         <br>
         <br> 
         <br>
