new user and project servers added

--- a/public/demo.html
+++ b/public/demo.html
@@ -17,7 +17,7 @@
   position: absolute;
 }
     </style>
-    <script src="systemlist.js"></script>
+    <script src="demo.js"></script>
   </head>
   <body>
     <header>
